# ByteDance

./: .gitignore  .gitmodules  Readme.md
TrainingCamp/FinalHomework/: .editorconfig
TrainingCamp/FinalHomework/app/: build.gradle.kts  proguard-rules.pro
TrainingCamp/FinalHomework/app/src/main/: AndroidManifest.xml
TrainingCamp/FinalHomework/app/src/main/assets/: about_app.md  qna_data.json
TrainingCamp/FinalHomework/app/src/main/cpp/: CMakeLists.txt  llama-jni.cpp
TrainingCamp/FinalHomework/app/src/main/res/anim/: fab_switch_side.xml  slide_in_left.xml  slide_in_right.xml
TrainingCamp/FinalHomework/app/src/main/res/drawable/: anim_loading_dots.xml  anim_speaker_playing.xml  bg_bottom_sheet.xml  bg_btn_action_square2.xml  bg_bubble_ai.xml  bg_bubble_user.xml  bg_circle_blue.xml  bg_circle_button.xml  bg_custom_toast.xml  bg_deep_think_container.xml  bg_feedback_input.xml  bg_icon_circle.xml  bg_input_field.xml  bg_item_msg_ai_border.xml  bg_menu_popup.xml  bg_model_card_status_active.xml  bg_model_card_status_ready.xml  bg_model_manager_search_input.xml  bg_quote_pill.xml  bg_select_model.xml  bg_send_btn.xml  (+45 more)
TrainingCamp/FinalHomework/docs/: README.md
TrainingCamp/FinalHomework/gradle/wrapper/: gradle-wrapper.properties
TrainingCamp/Homework01/app/: build.gradle.kts
TrainingCamp/Homework01/app/src/main/: AndroidManifest.xml
TrainingCamp/Homework01/gradle/wrapper/: gradle-wrapper.properties
TrainingCamp/Homework02/app/: build.gradle.kts
TrainingCamp/Homework02/app/src/main/: AndroidManifest.xml
TrainingCamp/Homework02/gradle/: libs.versions.toml
TrainingCamp/Homework02/gradle/wrapper/: gradle-wrapper.properties
TrainingCamp/Homework03/: settings.gradle.kts
TrainingCamp/Homework03/app/: build.gradle.kts
TrainingCamp/Homework03/app/src/main/: AndroidManifest.xml
TrainingCamp/Homework03/gradle/wrapper/: gradle-wrapper.properties
(+188 files in other folders)
